--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/12/98</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned after small boat carrying migrants sank near Cádiz (ES)</b><br>Source: MNS<br>
+Found dead: <b>01/05/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Brahim Bouraam (man, 29)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned in the River Seine (FR) after being caught by skinheads at National Front rally</b><br>Source: CARF/IRR/Searchlight<br>
 
 <br>
 
