--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died of wounds after jumping from bus that was deporting him from Nador (MA)</b><br>Source: MUGAK<br>
+Found dead: <b>01/04/93</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (28; 35)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>hit by train in Balerna (CH) Swiss Alps while walking on tracks to Switzerland</b><br>Source: TA/NZZ<br>
 
 <br>
 
