--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/93</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (28; 35)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>hit by train in Balerna (CH) Swiss Alps while walking on tracks to Switzerland</b><br>Source: TA/NZZ<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>8</b><br>Name, gender, age: <b>Asaho (7 children, 0-9; 1 woman)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned on way from Turkey to Greece; family fleeing IS</b><br>Source: Imkander<br>
 
 <br>
 
