--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/02/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hüseyin Vurucu (man, 40)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>jumped in front of train in Stadtallendorf (DE) out of fear of deportation</b><br>Source: INDd/jW/IRR<br>
+Found dead: <b>03/05/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdoulaye (man, 23)</b><br>Region of origin: <b>Ivory Coast</b><br>Cause of death: <b>stowaway, under truck, permitted but prevented from travelling to Málaga (ES) from the Spanish enclave of Ceuta</b><br>Source: MNS/MUGAK/SUR<br>
 
 <br>
 
