--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/12/02</b><br>Number of person: <b>20</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq, Afghanistan</b><br>Cause of death: <b>drowned when 2 vessels got caught in a storm off Evia (GR)</b><br>Source: MNS/AP<br>
+Found dead: <b>24/02/04</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after ship sank off coast of Turkey, bodies washed ashore near Ayvalik (TR)</b><br>Source: NOB/MNS<br>
 
 <br>
 
