--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>24/02/04</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>drowned after ship sank off coast of Turkey, bodies washed ashore near Ayvalik (TR)</b><br>Source: NOB/MNS<br>
+Found dead: <b>07/01/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Oury Jalloh (man, 21)</b><br>Region of origin: <b>Sierra Leone</b><br>Cause of death: <b>burnt to death in police cell in Dessau (DE) while his hands were tied down on either side, case under investigation</b><br>Source: VRF/IND/St.W/VRF/SP/MDR/ARI/PR/Afr.Courier<br>
 
 <br>
 
