--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/07/07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, body found in the Mediterranean Sea by Armed Forces of Malta</b><br>Source: MNS<br>
+Found dead: <b>16/07/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>shot dead by Turkish border police near Syria when bus carrying refugees refused to stop</b><br>Source: NW<br>
 
 <br>
 
