--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/04/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>died in a fire caused by arson attack on refugee centre in Gieboldehausen (DE)</b><br>Source: Konkret/ZAG<br>
+Found dead: <b>13/01/14</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies found on different beaches on Chios (GR)</b><br>Source: W2EU/GreekReporter/Newsit<br>
 
 <br>
 
