--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/07/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>David S. (man, 23)</b><br>Region of origin: <b>Armenia</b><br>Cause of death: <b>suicide, slit wrists in Nuremberg (DE) prison cell, was due to be deported and separated from parents</b><br>Source: ARI<br>
+Found dead: <b>Dec 01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>drowned while trying to swim away in the Aegean Sea from a deserted island near Turkish coast</b><br>Source: WB<br>
 
 <br>
 
