--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Amoudou Taibou Diallo (man, 16)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when small wooden boat capsized off coast of the Spanish enclave of Melilla (ES); 1 survivor</b><br>Source: PRI/PrivateSource/BBC/El Diario/Caminando/IOM<br>
+Found dead: <b>Oct 07</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suicide, lay down under train in Great Britain after losing his job and having asylum claim rejected</b><br>Source: TheNews<br>
 
 <br>
 
