--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/06</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan, Mauritania</b><br>Cause of death: <b>drowned when boat carrying 29 migrants to Greece sank off western coast of Turkey</b><br>Source: TDN/FE/PR<br>
+Found dead: <b>30/08/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Altankov Dagwasoundel (man, 28)</b><br>Region of origin: <b>Mongolia</b><br>Cause of death: <b>fell from 6th floor window trying to escape detention in Köpenick, Berlin (DE)</b><br>Source: ARI/FRBer/Liga für Mr./MNS/taz<br>
 
 <br>
 
