--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdel Majid (man, 45)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>died in Calais (FR) while attempting to board freight train bound for Great Britain</b><br>Source: GuardianUn./IBTimes<br>
+Found dead: <b>07/03/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>David Mardiani (boy, 17)</b><br>Region of origin: <b>Georgia</b><br>Cause of death: <b>suicide, asylum seeker hanged himself after hunger strike in Hamburg deportation centre (DE)</b><br>Source: WSWS/Migreurop/CaucKnot/SP/taz/AN/IRR/MNS<br>
 
 <br>
 
