--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/07/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hüseyin Dikec (man)</b><br>Region of origin: <b>Turkey</b><br>Cause of death: <b>suicide, at immigration office in Gütersloh (DE), set himself on fire in front of his 5 children out of fear of deportation</b><br>Source: ERB<br>
+Found dead: <b>01/05/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yilma Wondwossen B. (man, 31)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>drowned himself in Teltow Canal in Berlin (DE) after asylum application was rejected</b><br>Source: taz/ProAsyl/ZAG<br>
 
 <br>
 
