--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/05/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Julia Kowaltschuk</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suicide, mentally ill refugee, overdosed after social workers failed to provide help</b><br>Source: FR-Th<br>
+Found dead: <b>26/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers near coast of Calabria (IT)</b><br>Source: LR/Migreurop/PICUM/FE<br>
 
 <br>
 
