--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>26/04/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 40)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after being thrown overboard by smugglers near coast of Calabria (IT)</b><br>Source: LR/Migreurop/PICUM/FE<br>
+Found dead: <b>09/02/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yohannes Alemu (man, 27)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>suicide, in the Danube River in Regensburg (DE) out of fear of deportation</b><br>Source: Morgengr./AN/ESG/ZAG<br>
 
 <br>
 
