--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rabia el Omari (man, 17)</b><br>Region of origin: <b>Lebanon</b><br>Cause of death: <b>died in arson attack on refugee hostel in Lübeck (DE)</b><br>Source: IRR/Independent/BAIN news/ZAG<br>
+Found dead: <b>19/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Houmed Moussa (boy, 17)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>drowned in Calais (FR) while trying to hide from police</b><br>Source: Vice/Socialist Worker/IBT<br>
 
 <br>
 
