--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/12/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, bodies found on beach near Castillejos (ES)</b><br>Source: ELM/GARA/MNS<br>
+Found dead: <b>24/12/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Kurdistan-Iraq</b><br>Cause of death: <b>drowned trying to swim ashore when boat sank near coast of Corfu (GR)</b><br>Source: MNS/AP<br>
 
 <br>
 
