--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/02/06</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat carrying 24 passengers capsized near Alboran Island (ES)</b><br>Source: MNS/ST/APDHA/NOB<br>
+Found dead: <b>20/12/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Razgar Rassool Hamad (man, 24)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died of hypothermia in West Bromwich (GB), body found outside abandoned factory</b><br>Source: BBC/IRR<br>
 
 <br>
 
