--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Apr 03</b><br>Number of person: <b>76</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, bodies found on beach in Tarifa (ES)</b><br>Source: SOS<br>
+Found dead: <b>24/08/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nasir Galid (man, 32)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died in hospital in Amsterdam (NL) of head injury from attack on garage he was sleeping in with other refugees</b><br>Source: WijZijnHier/VK<br>
 
 <br>
 
