--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/06/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hussein Nasseri (man, 26)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>shot himself in his car in Eastbourne (GB) after asylum claim was rejected; feared execution in Iran as he was gay</b><br>Source: SC/BBC/IRR/NCADC<br>
+Found dead: <b>16/11/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>suicide, in psychiatric clinic in Liestal (CH)</b><br>Source: ProAsyl/Le Courrier/20Min<br>
 
 <br>
 
