--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (young man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned on way to Spain when small boat sank off coast of Mostaganem (DZ)</b><br>Source: TSA/FE<br>
+Found dead: <b>31/08/10</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>bodies found in advanced state of decomposition by Guardia Civil in the Spanish enclave of Ceuta (ES)</b><br>Source: SUR<br>
 
 <br>
 
