--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>27/09/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 20)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>drowned after jumping off boat that had been stranded near Marina di Palma, coast of Sicily (IT)</b><br>Source: LS/GDS<br>
+Found dead: <b>Sep 08</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N. (14 men)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies found in boat near Arguineguín (ES) after 12-day long trip from Mauritania</b><br>Source: ABC/MUGAK/PrensaLibre/ElDia/NOB/jW/VK<br>
 
 <br>
 
