--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hussayn Shah (man)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>shot by police near Skopje (MK) after being detained by police at Macedonian-Belgian border</b><br>Source: IRR/MNS<br>
+Found dead: <b>06/12/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of dehydration on vessel carrying 53 migrants and rescued near Dar Kebdani (MA)</b><br>Source: FE<br>
 
 <br>
 
