--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Aug 08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Adam Osman Mohammed (m, 32)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>shot by militia in Calgoo (SD) after asylum claim was rejected in Great Britain</b><br>Source: MNS/Independent/WP/Spits/Telegraph<br>
+Found dead: <b>30/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>drowned trying to swim across the Kolpa River on Croatian-Slovenian border; 7 intercepted by police</b><br>Source: IOM Slovenia/TotSloveniaNews<br>
 
 <br>
 
